--- a/src/index.css
+++ b/src/index.css
@@ -40,6 +40,7 @@ body {
 /* MovieCard Custom CSS */
 .movie {
   background-color: #080f36;
+
   border-radius: 3px;
   box-shadow: 4px 4px 5px rgba(63, 60, 60, 0.5);
   overflow: hidden;
@@ -48,18 +49,28 @@ body {
   height: 510px;
   position: relative;
   cursor: pointer;
+  border: 2px solid #080f36;
+  transition: 0.5s all;
 }
 
 .movie img {
   object-fit: cover;
   height: 450px;
   max-width: 100%;
+  transition: 0.5s all;
+}
+
+.movie:hover {
+  transform: scale(1.1);
+  transition: 0.5s all;
 }
 
 .movie-over {
   position: absolute;
-  background-color: rgba(255, 255, 255, 0.7);
-  color: #000;
+  /* background-color: rgba(255, 255, 255, 0.7); */
+  background-color: rgba(128, 128, 128, 0.521);
+  /* color: #000; */
+  color: white;
   bottom: 0;
   left: 0;
   right: 0;
